[package]
name = "moujin_bot"
description = "Rust implementation of moujin-dusic site"
readme = "README.md"
authors = ["Prouk"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version  ="0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version = "1.18.0", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
reqwest = "0.11.10"
bytemuck = "1.9.1"
ogl33 = "0.3.0"
beryllium = "0.7.6"
zstring = "0.1.3"

[dev-dependencies]
imagine = "0.0.8"